# aegish

./: .gitignore  1gb  LICENSE  README.md  example_config.json  pyproject.toml  setup.py  upload.sh
.github/workflows/: python-app.yml
src/aegish/: claude.py  commandrunner.py  config.py  debug.py  gemini.py  inputhandler.py  main.py  models.py  ollamahandler.py  postprocess.py  safetychecker.py
src/aegish/Handlers/: chatgpt.py  ollama.py
tests/: test_commandrunner.py  test_config.py  test_gemini.py  test_inputhandler.py
