[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "aegish"
version = "0.1.2"
description = "Natural language to Linux command converter"
authors = [
    { name="Zain Marshall", email="zainmarshall1000@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "openai",
    "google-genai",
    "anthropic",
    "ollama"
]
license = "MIT" 


[project.scripts]
ag = "aegish.main:main"
